common-applications/test-environment/opendesign-datapertus-test/mindspore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mindspore-deployment
  namespace: opendesign-datapertus-test
spec:
  selector:
    matchLabels:
      app: mindspore
  template:
    metadata:
      labels:
        app: mindspore
    spec:
      containers:
      - name: mindspore
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/datastat/mindspore-test:2aa2f79321f318912043b3949920e96bd43f2a80
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: datastat-nginx-volume
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      volumes:
      - configMap:
          defaultMode: 420
          name: mindspore-configmap
        name: datastat-nginx-volume
