common-applications/test-environment/opendesign-datapertus-test/mindspore/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: opendesign-datapertus-test-mindspore-ingress
  namespace: opendesign-datapertus-test
spec:
  tls:
    - hosts:
        - datastatmindspore.test.osinfra.cn
      secretName: opendesign-datapertus-test-mindspore-tls
  rules:
    - host: datastatmindspore.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: mindspore-service
              servicePort: 80
            path: /
